--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -8,7 +8,18 @@ relationships:
     sessdb: "redissession:redis"
 
 mounts:
-    "data": "shared:files/data"
+    'data':
+        source: local
+        source_path: data
+    'conf/provisioning/plugins':
+        source: local
+        source_path: plugins
+    'conf/provisioning/notifiers':
+        source: local
+        source_path: notifiers
+    'conf/provisioning/dashboards':
+        source: local
+        source_path: dashboards
 
 web:
     upstream:
@@ -23,4 +34,3 @@ web:
 hooks:
     build: "bash ${PLATFORM_APP_DIR}/build.sh"
     deploy: "sh ${PLATFORM_APP_DIR}/deploy.sh"
-
