Fix issue with restart in loop at redeploy, cf trap

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -26,7 +26,7 @@ web:
         socket_family: tcp
         protocol: http
     commands:
-        start: "sh ./prestart.sh; sh ./start.sh"
+        start: "sh ./start.sh"
     locations:
         /:
             root: public
